<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title">EVENT DICODING</string>
    <string name="description">Rekomendasi Event untukmu…</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_mendatang">Mendatang</string>
    <string name="title_selesai">Selesai</string>
    <string name="title_favorite">Dibintangi</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting_name">Setting</string>
    <string name="event_image">Event Image</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_owner_name">Diselenggarakan oleh: %1$s</string>
    <string name="tv_begin_time">Waktu: %1$s</string>
    <string name="tv_quota">Sisa Kuota: %1$d</string>
</resources>