<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/baseline_star_24"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/title_mendatang" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_done_all_24"
        android:title="@string/title_selesai" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting_name" />

</menu>