<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dicodingevent.ui.mendatang.MendatangFragment"
        android:label="@string/title_mendatang"
        tools:layout="@layout/fragment_mendatang" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dicodingevent.ui.selesai.SelesaiFragment"
        android:label="@string/title_selesai"
        tools:layout="@layout/fragment_selesai" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.dicodingevent.SettingFragment"
        android:label="SettingFragment" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="FavoriteFragment" />

</navigation>